<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/general_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/products_button"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_button_shape"
        android:onClick="OnProducts"
        android:text="@string/product_text"
        android:textColor="@color/common_button_color" />

    <Button
        android:id="@+id/lists_button"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_button_shape"
        android:onClick="OnLists"
        android:text="@string/list_text"
        android:textColor="@color/common_button_color" />

    <Button
        android:id="@+id/dispatch_button"
        android:layout_width="230dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_button_shape"
        android:onClick="OnDispatch"
        android:text="@string/dispatch_text"
        android:textColor="@color/common_button_color" />
</LinearLayout>

